--- a/tasks/tasks.json
+++ b/tasks/tasks.json
@@ -1,5 +1,67 @@
 [
   {
+    "c": {
+      "finished_tasks_progress": "0",
+      "unfinished_tasks_progress": "100",
+      "done_len": 0,
+      "empty_len": 18,
+      "done_indices": [],
+      "empty_indices": [
+        0,
+        1,
+        2,
+        3,
+        4,
+        5,
+        6,
+        7,
+        8,
+        9,
+        10,
+        11,
+        12,
+        13,
+        14,
+        15,
+        16,
+        17
+      ],
+      "tasks": [
+        "TASK: Main Function",
+        "TASK: Data Types",
+        "TASK: Variables",
+        "",
+        "TASK: Operators",
+        "TASK: Conditionals",
+        "TASK: Loops",
+        "",
+        "TASK: Functions",
+        "",
+        "TASK: Arrays",
+        "",
+        "TASK: Enums",
+        "",
+        "TASK: Structures",
+        "TASK: Typedef",
+        "",
+        "TASK: Pointers",
+        "",
+        "TASK: Memory Management",
+        "",
+        "TASK: Preprocessors Directives",
+        "",
+        "TASK: Header Files",
+        "",
+        "TASK: File Handling",
+        "TASK: Command-Line Arguments",
+        "",
+        "TASK: Bitwise"
+      ]
+    },
+    "id": 0,
+    "file": "c.txt"
+  },
+  {
     "js": {
       "finished_tasks_progress": "0",
       "unfinished_tasks_progress": "100",
@@ -65,7 +127,7 @@
         "TASK: BigInt (ES2020)"
       ]
     },
-    "id": 0,
+    "id": 1,
     "file": "js.txt"
   },
   {
@@ -150,7 +212,7 @@
         "TASK: TS Events"
       ]
     },
-    "id": 1,
+    "id": 2,
     "file": "ts.txt"
   }
 ]
